<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total Quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço Por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">KM Por Litro</string>
    <string name="total_spend">Gasto Total Será:</string>
    <string name="total_value">R$: 0</string>
    <string name="calculate">Calcular</string>
    <string name="validation_fill_all_fields">Preencha Todos Os Campos.</string>
</resources>